# proteus

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: bench.rs
examples/: custom.rs  github.rs  simple.rs  using_structs.rs
src/: action.rs  errors.rs  lib.rs  transformer.rs
src/actions/: constant.rs  count.rs  join.rs  len.rs  mod.rs  strip.rs  sum.rs  trim.rs
src/actions/getter/: getter.rs  mod.rs
src/actions/getter/namespace/: errors.rs  mod.rs  namespace.rs
src/actions/setter/: errors.rs  mod.rs  setter.rs
src/actions/setter/namespace/: errors.rs  mod.rs  namespace.rs
src/parser/: action_parsers.rs  errors.rs  mod.rs  parsable_action.rs  parser.rs
