[package]
authors = ["Dean Karn <dean.karn@gmail.com>"]
description = "Proteus is intended to make dynamic transformation of data using serde serializable, deserialize using JSON and a JSON transformation syntax similar to Javascript JSON syntax."
edition = "2018"
keywords = [
    "json",
    "transform",
    "transformation",
]
license = "MIT OR Apache-2.0"
name = "proteus"
readme = "README.md"
repository = "https://github.com/rust-playground/proteus"
version = "0.4.0"

[badges.travis-ci]
repository = "rust-playground/proteus"

[[bench]]
harness = false
name = "bench"

[dependencies]
regex = "1.4.2"
serde_json = "1.0.60"
typetag = "0.1.6"
thiserror = "1.0.22"
once_cell = "1.5.2"

[dependencies.serde]
features = ["derive"]
version = "1.0.118"

[dev-dependencies]
criterion = "0.3.3"

[lib]
bench = false
